[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["ttitus72372 <tnt2594@gmail.com>"]
description = ""
name = "databasewithusersflask"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
